@@ -479,6 +479,7 @@ Version 1.5.1 -- CVS
     than 6 (#1339211).
   - Allow double quote to be used in MOTD (#1276959).
   - Prevent right_frame to be set to '//www.example.com'.
+  - Tweak printer friendly attachment view.
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
